--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@
 #python==3.5
 h5py==2.10.0
 keras==2.2.4
-tensorflow==1.13.1
+tensorflow-gpu==1.13.1
 numpy==1.16.2
 pydensecrf==1.0rc3
 opencv-python==3.4.4.19
 scipy==1.2.0
 scikit-image==0.14.2
 matplotlib==3.0.2
+pandas
